[package]
name = "winutils"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
init = []
wstring = []
window = []
utils = []
winapi-crate = ["winapi"]
default = [
    "init",
    "wstring",
    "window",
    "utils"
]

[dependencies.winapi]
version = "*"
optional = true
features = [
    "sysinfoapi",
    "winuser",
    "combaseapi",
    "roapi"
]
