[package]
name = "winutils"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
init = []
wstring = ["wstr-macro"]
wstr-macro = ["proc-wstring"]
window = []
utils = []
winapi-crate = ["winapi"]
default = [
    "init",
    "wstring",
    "window",
    "utils"
]

[dependencies.proc-wstring]
path = "./proc-wstring"
optional = true

[dependencies.winapi]
version = "*"
optional = true
features = [
    "sysinfoapi",
    "winuser",
    "combaseapi",
    "roapi"
]
