[package]
name = "winutils"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
init = []
wstring = ["proc-wstring"]
window = []
utils = []
winapi-crate = ["winapi"]
default = [
    "init",
    "wstring",
    "window",
    "utils"
]

[dependencies.proc-wstring]
path = "./proc-wstring"
optional = true

[dependencies.winapi]
version = "*"
optional = true
features = [
    "sysinfoapi",
    "winuser",
    "combaseapi",
    "roapi"
]
